--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_refresh">Обновить</string>
     <string name="action_settings">Настройки</string>
     <string name="action_info">Информация</string>
+    <string name="action_help">Помощь</string>
     <string name="switcher_title">Переключатель %d</string>
     <string name="switcher_port">Порт: %d</string>
     <string name="value_on">ВКЛ</string>
