--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_info">Info</string>
+    <string name="action_help">Help</string>
     <string name="switcher_title">Switcher %d</string>
     <string name="switcher_port">Port: %d</string>
     <string name="value_on">ON</string>
